content/v1.3/2-authorization/authorization.md
---
slug: "/post3"
title: "Авторизация"
sort: "02"
---

Авторизоваться в сервисе можно по логину/паролю или через социальные сети.

![authorization-widget1.png](./images/authorization-widget1.png "Виджет авторизации")

# Авторизация по логину/паролю

При авторизации по логину/паролю виджет разделен на две формы - ввод идентификационных данных и ввод пароля авторизации. 

В первой форме нужно ввести идентификатор и нажать **Далее**. 

В качестве идентификатора может использоваться:

●	логин;

●	электронная почта, заранее прикрепленная к профилю;

●	номер телефона, заранее прикрепленный к профилю;

●	id (указанный в профиле пользователя).

Открывается вторая форма виджета, где отображается аватарка и введенный идентификатор пользователя, а также поле для ввода пароля. 
 
![authorization-widget2.png](./images/authorization-widget2.png "Виджет авторизации (форма №2)")

После ввода пароля и нажатия на кнопку **Войти**, происходит вход в **Личный кабинет** пользователя.

# Авторизация через социальные сети 

Для авторизации через социальные сети нужно выбрать необходимую социальную сеть. 

![authorization-social-networking.png](./images/authorization-social-networking.png "Раздел виджета авторизация по социальным сетям")

***Примечание:*** далее рассматривается авторизация с помощью социальной сети Google.

После выбора социальной сети необходимо авторизоваться в ней под своим логином и паролем. Если аккаунт социальной сети прикреплен к профилю пользователя, то автоматически происходит авторизация в профиле. 

Если аккаунт в социальной сети не прикреплен ни к одному из профилей, открывается форма выбора действия. 

![authorization-social-networking-no-binding.png](./images/authorization-social-networking-no-binding.png "Окно выбора действий с социальной сетью") 

Если у пользователя есть зарегистрированный профиль в сервисе, то можно привязать аккаунт к данному профилю, нажав на **Привязать аккаунт**.  
Открывается поле ввода идентификатора с последующем вводом пароля. 

![authorization-social-networking-add.png](./images/authorization-social-networking-add.png "Ввод идентификатора для привязки социальной сети к аккаунту") 

![authorization-social-networking-add-passwd.png](./images/authorization-widget2.png "Ввод пароля пользователя")

После прохождения авторизации открывается профиль с привязанным аккаунтом социальной сети в разделе **Внешние аккаунты**. 

Если у пользователя нет профиля в сервисе, в форме выбора действий можно создать аккаунт, нажав кнопку **Создать аккаунт**. 

Происходит переход на виджет регистрации. Процесс регистрации описан в разделе [**Регистрация нового пользователя**](https://docs.trusted.plus/v1.3/2-authorization/registration). 

# Смена профиля

Для смены аккаунта нужно кликнуть мышью на идентификатор пользователя. При наведении на идентификатор отображается подсказка **Сменить учетную запись**.  

![change-account.png](./images/change-account.png "Окно смены профиля")

Происходит переход на страницу выбора необходимого профиля. 

![change-account2.png](./images/change-account2.png "Окно выбора профиля")

Можно выбрать аккаунт из ранее сохраненных или нажать **Сменить аккаунт**.

Открывается виждет авторизации для ввода данных другого пользователя.

![authorization-widget1.png](./images/authorization-widget1.png "Виджет авторизации (форма №1)")

# Восстановление пароля

Для восстановления пароля есть 2 варианта.

**1-й вариант**.  

В форме авторизации на уровне введения идентификатора нужно начать вводить свой идентификатор, при появлении надписи **Не можете войти?**, нужно нажать на нее и выбрать в открывшемся меню **Восстановить пароль**. 

![cannot-login1.png](./images/cannot-login1.png "Виджет авторизации для восстановления пароля")

**2-й вариант.**  

После введения идентификатора и прохождения на форму введения пароля, нужно начать вводить сиволы пароля, при появлении надписи **Не можете войти?**, нужно нажать на нее.

![cannot-login2.png](./images/cannot-login2.png "Виджет авторизации для восстановления пароля (форма ввода логина)")

В открывшемся списке нужно выбрать **Восстановить пароль**.

![cannot-login3.png](./images/cannot-login3.png "Виджет авторизации для восстановления пароля (форма ввода пароля)")

В открывшемся виджете необходимо ввести телефон или адрес электронной почты, которые прикреплены к профилю.

![restore-passwd.png](./images/cannot-login1-indenity.png  "Виджет восстановления пароля")  

На указанный идентификатор (телефон или адрес электронной почты) придет проверочный код, который нужно ввести в поле ввода. 

![restore-passwd2.png](./images/restore-passwd2.png "Форма ввода проверочного кода")
 
Если проверочный код не был введен в положенное время или он не пришел, то есть возможность запросить код повторно. 

В открывшемся окне нужно заполнить новый пароль и его подтверждение. 

![restore-passwd-new.png](./images/restore-passwd-new.png "Форма восстановления пароля")

 После успешной смены пароля происходит автоматический переход в профиль.


# Сброс пароля 

При авторизации через провайдер LDAP для пользователей предусмотрен сброс пароля.

Для этого на форме авторизации нужно выбрать авторизацию через LDAP.

![ldap1.png](./images/ldap1.png "Форма авторизации")

Открывается форма ввода авторизационных данных пользователя в Active Directory (AD).

![ldap2.png](./images/ldap2.png "Форма авторизации в AD")

Для сброса пароля нужно нажать **Сбросить пароль**. Открывается форма ввода логина Active Directory.

![ldap3.png](./images/ldap3.png "Форма ввода логина для сброса пароля")

Необходимо ввести логин и нажать **Сбросить пароль**. 

После успешной проверки пользователя в Active Directory, открывается форма ввода проверочного кода, который приходит на привязанную электронную почту, и задания нового пароля. 

![ldap4.png](./images/ldap4.png "Форма ввода проверочного кода и пароля")

При нажатии на кнопку **Войти** происходит вход в приложение.

# Блокировка входа пользователя 

При вводе пароля неправильно более N раз подряд с одного IP-адреса, вход пользователя на сервис блокируется с этого IP-адреса.

В виджете авторизации отображается ошибка.

![block-ip.png](./images/block-ip.png "Информационное сообщение о блокировке входа")

Количество доступных попыток авторизации и время блокировки в минутах задаются в конфигурационном файле системы. По умолчанию задано 5 попыток ввода пароля и 15 минут блокировки.

Вход через социальные сети или с другого IP-адреса возможен.
